--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Install",
   "main": "index.js",
   "scripts": {
-    "start": "afterwriting --overwrite --source out/script.fountain --pdf out/script.pdf"
+    "start": "fountain-preprocessor Script.fountain -o out/Script.fountain && afterwriting --overwrite --source out/Script.fountain --pdf out/Script-$(node -e 'console.log(require(\"./package.json\").version)').pdf"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JakeGWater/script-template#readme",
   "dependencies": {
-    "afterwriting": "^1.17.3"
+    "afterwriting": "^1.17.3",
+    "fountain-preprocessor": "^1.0.5"
   }
 }
