--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,17 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.4.1
+      - run: |
+          npm install
+          npm start
+
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
+          automatic_release_tag: "latest"
           files: |
             out/*.pdf
             out/*.fountain
